--- a/project/index.html
+++ b/project/index.html
@@ -73,23 +73,23 @@
         <h3>Who We Are</h3>
         <p>Welcome to Scoots! Your gateway to the thrilling, uncharted territories of Cozumel! We’re not just a rental
           company, we’re your ticket to an unforgettable island adventure!
-          </br>
-          </br>
+          <br>
+          <br>
           Our journey began with our fearless founder, Carlos Mendez, a Cozumel native with a burning desire to share
           the island’s hidden treasures. Tired of seeing visitors miss out on the true beauty of Cozumel, Carlos took
           matters into his own hands. He created Scoots, a company that breaks away from the usual, offering you the
           freedom to explore the island’s secret spots on your own terms.
-          </br>
-          </br>
+          <br>
+          <br>
           At Scoots, we’re all about the thrill of discovery! We offer top-notch scooters, jeeps, and ATVs, perfect for
           adventurers ready to veer off the beaten path. We believe in the magic of Cozumel, and we’re here to help you
           uncover it!
-          </br>
-          </br>
+          <br>
+          <br>
           So, are you ready to escape the crowds? Ready to discover the island’s best-kept secrets? With Scoots, you’re
           not just renting a vehicle, you’re embarking on the adventure of a lifetime!
-          </br>
-          </br>
+          <br>
+          <br>
           Join us at Scoots, and let’s make your Cozumel experience truly unforgettable!
         </p>
       </div>
@@ -98,22 +98,22 @@
         <h3>Meet Our Best Sellers!</h3>
         <!-- Full-width images with number text -->
         <div class="mySlides">
-          <img src="./images/aiGenerated/atv3-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach">
+          <img src="./images/aiGenerated/atv3-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/ATV1-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach 2">
+          <img src="./images/aiGenerated/ATV1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 2">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/scooter1-1024x768-opt.webp" loadings="lazy" alt="scooter picture on the beach 3">
+          <img src="./images/aiGenerated/scooter1-1024x768-opt.webp" loading="lazy" alt="scooter picture on the beach 3">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/scooter2-1024x768-opt.webp" loadings="lazy" alt="atv picture on the beach">
+          <img src="./images/aiGenerated/scooter2-1024x768-opt.webp" loading="lazy" alt="atv picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/jeep1-1024x768-opt.webp" loadings="lazy" alt="Jeep picture on the beach">
+          <img src="./images/aiGenerated/jeep1-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach">
         </div>
         <div class="mySlides">
-          <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loadings="lazy" alt="Jeep picture on the beach 2">
+          <img src="./images/aiGenerated/jeep2-1024x768-opt.webp" loading="lazy" alt="Jeep picture on the beach 2">
         </div>
 
         <!-- Next and previous buttons -->
@@ -162,42 +162,38 @@
 
     <section class="cozumel-container">
       <h3>Discover Our Side of Cozumel</h3>
+      <div>
       <picture>
         <source srcset="images/cozumel/cozumel-port-sign-500x375-opt.webp" media="(max-width: 860px)">
         <img src="images/cozumel/cozumel-port-sign-opt.webp" loading="lazy" alt="Cozumel Port Sign">
-        <div class="text-overlay">
-          <!-- <h4>Beautiful Cozumel</h4> -->
-          <p>We love our guests that come in on the cruise ships.</p>
-        </div>
       </picture>
-
+      <p class="text-overlay">We love our guests that come in on the cruise ships.</p>
+    </div>
+    <div>
       <picture>
         <source srcset="images/cozumel/beachview-500x375-opt.webp" media="(max-width: 860px)">
         <img src="images/cozumel/beachview-opt.webp" loading="lazy" alt="A beach view">
-        <div class="text-overlay">
-          <!-- <h4>Beautiful Cozumel</h4> -->
-          <p>Our beaches are the best in the world for relaxing and enjoying the waves.</p>
-        </div>
       </picture>
-
+      <p class="text-overlay">Our beaches are the best in the world for relaxing and enjoying the waves.</p>
+    </div>
+    <div>
       <picture>
         <source srcset="images/cozumel/Playa-del-Carmen-houses-boats-500x375-opt.webp" media="(max-width: 860px)">
         <img src="images/cozumel/Playa-del-Carmen-houses-boats-opt.webp" loading="lazy"
           alt="Play del carmen with some boats in the water">
-        <div class="text-overlay">
-          <!-- <h4>Beautiful Cozumel</h4> -->
-          <p>Come and stay in the beautiful bungalos so you can enjoy our island more.</p>
-        </div>
       </picture>
+      <p class="text-overlay">Come and stay in the beautiful bungalos so you can enjoy our island more.</p>
+
+    </div>
+    <div>
       <picture>
         <source srcset="images/cozumel/SoyIslaCozumel-500x375-opt.webp" media="(max-width: 860px)">
         <img src="images/cozumel/SoyIslaCozumel-opt.webp" loading="lazy"
           alt="Grafiti on the wall that says Soy Isla Cozumel">
-        <div class="text-overlay">
-          <!-- <h4>Beautiful Cozumel</h4> -->
-          <p>Enjoy the local artists in places not seen by the mainstream tours.</p>
-        </div>
       </picture>
+      <p class="text-overlay">Enjoy the local artists in places not seen by the mainstream tours.</p>
+
+    </div>
     </section>
 
     <section id="weather" >
@@ -233,11 +229,11 @@
     <p><a href="contact.html">Contact Us</a></p>
     <div class="social">
       <a href="https://facebook.com" target="_blank">
-        <img src="images/facebook.png" alt="fb icon" />
+        <img src="images/facebook.png" alt="fb icon" >
       </a>
 
       <a href="https://instagram.com" target="_blank">
-        <img src="images/instagram.png" alt="instagram icon" />
+        <img src="images/instagram.png" alt="instagram icon" >
       </a>
     </div>
   </footer>
