rentals, contact updates

--- a/project/rentals.html
+++ b/project/rentals.html
@@ -71,33 +71,87 @@
     <div class="vehicles-grid">
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Honda Metro Scooter</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Honda Dio Scooter</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Honda PCX150 Scooter</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Honda Pioneer ATV</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Jeep Wrangler - 4 Door</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="vehicle">
-        <img src="https://placehold.co/250x250" alt="placeholder" class="image">
+        <img src="https://placehold.co/500x500" alt="placeholder" class="image">
         <h3>Jeep Wrangler - 2 Door</h3>
+        <div class="overlay">
+          <div class="text">
+            <p>Max Riders: 2</p>
+            <div class="pricing">
+              <p>Reservations from: $30</p>
+              <p>Walk-Ins from: $35 </p>
+            </div>
+          </div>
+        </div>
       </article>
 
 
@@ -149,7 +203,6 @@
     </section>
 
 
-    <script src="scripts/rentals.js"></script>
 
   </main>
 
@@ -168,6 +221,7 @@
     </div>
   </footer>
 
+  <script src="scripts/rentals.js"></script>
   <script src="../scripts/getdates.js"></script>
   <script src="../scripts/menu.js"></script>
 
