--- a/project/contact.html
+++ b/project/contact.html
@@ -57,7 +57,9 @@
       <div class="content-map">
 
         <div class="mapouter">
-              <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F"></iframe>
+          <!-- <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d239283.5522227276!2d-86.87425345!3d20.43208355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4facc97b44f901%3A0x2716ce912f7da3f0!2sPunta%20Sur%20Eco%20Beach%20Park!5e0!3m2!1sen!2sus!4v1712759628912!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     -->
+                    <iframe class="map" src="https://www.google.com/maps/d/embed?mid=1J8ESOuOVvY1Wb9l2vw8N2JkywKvGaVw&ehbc=2E312F"></iframe>
         </div>
 
         <div class="card-phone">
@@ -101,11 +103,11 @@
         <form action="POST">
           <ul>
             <li>
-              <label class="label-form">Name:<input type="text" id="name" name="user_name" placeholder="Full name" required></label>
+              <label class="label-form">Name:<input type="text" id="name" name="user_name" placeholder="Full name" required autocomplete="name"></label>
               
             </li>
             <li>
-              <label class="label-form">Email:<input type="email" id="mail" name="user_email" placeholder="username@domain.com" required ></label>
+              <label class="label-form">Email:<input type="email" id="mail" name="user_email" placeholder="username@domain.com" required autocomplete="email"></label>
               
             </li>
             <li>
