--- a/project/contact.html
+++ b/project/contact.html
@@ -20,9 +20,9 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/medium.css">
   <link rel="stylesheet" href="styles/larger.css">
-  <link rel="preload" href="styles/base.css" as="style">
+  <!-- <link rel="preload" href="styles/base.css" as="style">
   <link rel="preload" href="styles/medium.css" as="style">
-  <link rel="preload" href="styles/larger.css" as="style">
+  <link rel="preload" href="styles/larger.css" as="style"> -->
 </head>
 
 <body>
