--- a/project/rentals.html
+++ b/project/rentals.html
@@ -17,11 +17,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/aiGenerated/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="images/aiGenerated/favicon_io/site.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="preload" href="styles/base.css" as="style">
+  <!-- <link rel="preload" href="styles/base.css" as="style">
   <link rel="preload" href="styles/medium.css" as="style">
-  <link rel="preload" href="styles/larger.css" as="style">
-
-
+  <link rel="preload" href="styles/larger.css" as="style"> -->
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/medium.css">
