--- a/project/thankyou.html
+++ b/project/thankyou.html
@@ -66,8 +66,6 @@
     </footer>
 
     <script src="../scripts/getdates.js"></script>
-    <script src="../scripts/menu.js"></script>
-    <script src="scripts/slides.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <script src="../scripts/menu.js"></script>>
   </body>
 </html>
