--- a/project/links.html
+++ b/project/links.html
@@ -23,7 +23,7 @@
   <!-- <link rel="preload" href="styles/base.css" as="style">
   <link rel="preload" href="styles/medium.css" as="style">
   <link rel="preload" href="styles/larger.css" as="style"> -->
-  <link rel="preload" href="images/aiGenerated/scootsLocation2-300x300.webp" as="image">
+  <!-- <link rel="preload" href="images/aiGenerated/scootsLocation2-300x300.webp" as="image"> -->
 </head>
 
 <body>
